<resources>
    <string name="app_name">Assorti Project</string>
    <string name="confirm">Подтвердить</string>
    <string name="wrong_number"> Неверный номер?</string>
    <string name="restaurant">Рестораны</string>
    <string name="delivery">Доставка</string>
    <string name="favorite">Избранное</string>
    <string name="cart">Корзина</string>
    <string name="hint_phone_number">Номер телефона</string>
    <string name="loading_message">Загрузка...</string>
    <string name="radio_male">Мужчина</string>
    <string name="radio_female">Женщина</string>
    <string name="discount_terms">Условия участия в бонусной программе</string>
    <string name="content">The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again. The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again. The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again. The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.</string>
    <string name="server_error">Server ERROR!</string>
    <string name="discount_condution">Условия участия в бонусной программе</string>
    <string name="delivery_condution">Условия доставки</string>
    <string name="menu">Меню</string>
    <string name="promotions_and_discounts">Акции и скидки</string>
    <string name="reviews">Отзывы</string>
    <string name="edit_message">Напишите отзыв</string>
    <string name="give_feedback">Оставить отзыв</string>
    <string name="all_products">Все блюда</string>
    <string name="result_products">Результаты поиска</string>
    <string name="popular">Популярные</string>
    <string name="hint_search_by_category">Поиск по категориям</string>
    <string name="message_description">Описание</string>
    <string name="weight">Вес</string>
    <string name="price">Цена</string>
    <string name="go_to_basket">Перейти в корзину</string>
    <string name="transition_string">hello</string>
    <string name="total">Итого</string>
    <string name="discount">Скидки</string>
    <string name="subtotal">Промежуточный итог</string>
    <string name="to_order">Заказать</string>
    <string name="all_data_is_request">Необходимо заполнить все данные</string>
    <string name="message_sign_out"> Вы уверерны что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="sign_out">Выйти</string>
    <string name="in_cash">Наличными</string>
    <string name="by_credit_card">Банковской картой</string>
    <string name="elsom">Счет <b>Элсом</b></string>
    <string name="pay_method">Оплата</string>
    <string name="message_success_order">Ваш заказ принят. Ожидайте.</string>
    <string name="ok">OK</string>
    <string name="success">Успешно</string>
    <string name="thank">Спасибо!</string>
    <string name="message_qr">QR-код</string>
    <string name="go_to_menu">Вернуться к выбору блюд</string>
    <string name="product_added_in_cart">Товар добавлен в корзину</string>
    <string name="product_deleted_in_cart">Товар удален из корзины</string>
    <string name="qr_message">Предъявите QR-код сотруднику ресторана на кассе для начисления или списания бонусных баллов.</string>
    <string name="hint_search">Поиск</string>
    <string name="policy_privacy">Политика безопасности</string>
    <string name="to_shop_menu">Вернутся к выбору блюд</string>
    <string name="request_wait">Вы часто отправляете запросы. Подождите 1 минуту</string>
    <string name="confirm_code">Неправильный код подтверждения</string>

</resources>
