<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/MyToolbarStyle"
                app:title="">

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cera_pro_medium"
                android:gravity="center"
                android:text="@string/reviews"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/exit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_exit"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/container_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:visibility="gone"
            android:id="@+id/isEmtyText"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/md_grey_400"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/container_send"
            android:fontFamily="@font/cera_pro_regular"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="Пока отзывов нет. Вы можете стать первым кто оставит отзыв."
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/container_send"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <EditText
                android:id="@+id/edit_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/cera_pro_regular"
                android:hint="@string/edit_message"
                android:textSize="14sp"
                android:maxLines ="3"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength ="2000"
                app:layout_constraintBottom_toTopOf="@id/btnSend"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_top_menu_shimmer"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/give_feedback"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_message" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>