<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    app:cardElevation="1dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    card_view:cardBackgroundColor="#E5E5E5">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardBackgroundColor="#ffffff">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_medium"
                android:gravity="center"
                android:maxEms="1"
                android:maxLines="1"
                android:text="Bugara"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/address_store"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/address_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_medium"
                android:gravity="center"
                android:maxEms="1"
                android:maxLines="1"
                android:text="address"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_store" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/expand_icon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginEnd="14dp"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="900"
        app:el_expanded="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"

            android:orientation="vertical">

            <TextView
                android:visibility="gone"
                android:id="@+id/delivery_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/delivery"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/delivery_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/cera_pro_regular"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDishes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:layout_marginTop="18dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardBackgroundColor="#ffffff">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/message_subtotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cera_pro_regular"
                        android:text="@string/total"
                        android:textColor="@color/textColor"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cera_pro_regular"
                        android:text="240 сом"
                        android:textColor="@color/redPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnShopOpen"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/rounded_search"
                android:fontFamily="@font/cera_pro_medium"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/to_shop_menu"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnOrder"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_shape_primary"
                android:fontFamily="@font/cera_pro_medium"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/to_order"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </net.cachapa.expandablelayout.ExpandableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/md_grey_300"
        app:layout_constraintTop_toBottomOf="@id/total" />

</LinearLayout>