<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:theme="@style/MyActionBarTheme"
                    app:title="">

                </androidx.appcompat.widget.Toolbar>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ic_cart"
                        android:layout_width="24dp"
                        android:src="@drawable/cart"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_height="24dp"/>

                    <TextView
                        android:id="@+id/badge_text_view"
                        android:layout_width="19dp"
                        android:layout_height="19dp"
                        android:textSize="11sp"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="14dp"
                        app:layout_constraintBottom_toBottomOf="@id/ic_cart"
                        app:layout_constraintStart_toStartOf="@id/ic_cart"
                        android:textColor="@android:color/white"
                        android:background="@drawable/news_bottom_nav_bg"
                        android:gravity="center"
                        android:padding="2dp"
                        tools:text="0" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </RelativeLayout>

        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_scrollFlags="scroll|enterAlways|snap">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp"
            android:id="@id/appbar"
            app:layout_scrollFlags="scroll|enterAlways|snap">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_search"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/rounded_search"
                        android:fontFamily="@font/cera_pro_light"
                        android:hint="@string/hint_search"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/md_grey_400"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txt_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/cera_pro_medium"
                        android:text="@string/menu"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="12dp"
                        android:clipToPadding="false"
                        android:paddingStart="16dp"
                        android:paddingLeft="0dp" />

                    <TextView
                        android:id="@+id/message_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/cera_pro_medium"
                        android:text="@string/all_products"
                        android:textColor="@color/textColor"
                        android:textSize="14sp"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="16dp"
                android:id="@+id/fab"
                app:layout_constraintEnd_toEndOf="parent"
                app:backgroundTint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_top"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
